--- a/modules/apps/web-experience/layout/layout-admin-web/src/main/resources/META-INF/resources/css/fragments_editor/FragmentsTranslation.scss
+++ b/modules/apps/web-experience/layout/layout-admin-web/src/main/resources/META-INF/resources/css/fragments_editor/FragmentsTranslation.scss
@@ -2,33 +2,31 @@ $translatedColor: #3DC513;
 $transparentWhite: rgba(255, 255, 255, 0);
 $untranslatedColor: #A7A9BC;
 
-.fragments-editor__fragment-entry-links {
-	lfr-editable {
-		display: block;
-		position: relative;
+lfr-editable {
+	display: block;
+	position: relative;
+}
+
+.translating {
+	.translated {
+		background-image: linear-gradient(45deg, $transparentWhite 46.67%, $translatedColor 46.67%, $translatedColor 50%, $transparentWhite 50%, $transparentWhite 96.67%, $translatedColor 96.67%, $translatedColor 100%);
+		background-size: 21.21px 21.21px;
+		border: solid 1px $translatedColor;
 	}
 
-	&.translating {
-		.translated {
-			background-image: linear-gradient(45deg, $transparentWhite 46.67%, $translatedColor 46.67%, $translatedColor 50%, $transparentWhite 50%, $transparentWhite 96.67%, $translatedColor 96.67%, $translatedColor 100%);
-			background-size: 21.21px 21.21px;
-			border: solid 1px $translatedColor;
-		}
+	.untranslated {
+		background-image: linear-gradient(45deg, $transparentWhite 46.67%, $untranslatedColor 46.67%, $untranslatedColor 50%, $transparentWhite 50%, $transparentWhite 96.67%, $untranslatedColor 96.67%, $untranslatedColor 100%);
+		background-size: 21.21px 21.21px;
+		border: solid 1px $untranslatedColor;
+	}
 
-		.untranslated {
-			background-image: linear-gradient(45deg, $transparentWhite 46.67%, $untranslatedColor 46.67%, $untranslatedColor 50%, $transparentWhite 50%, $transparentWhite 96.67%, $untranslatedColor 96.67%, $untranslatedColor 100%);
-			background-size: 21.21px 21.21px;
-			border: solid 1px $untranslatedColor;
-		}
-
-		.translated[type="image"]:after,
-		.untranslated[type="image"]:after {
-			content: '';
-			height: 100%;
-			left: 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
-		}
+	.translated[type="image"]:after,
+	.untranslated[type="image"]:after {
+		content: '';
+		height: 100%;
+		left: 0;
+		position: absolute;
+		top: 0;
+		width: 100%;
 	}
 }
